--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "farm-connect",
+  "name": "app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,24 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.6",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
-    "nativewind": "^2.0.11",
+    "expo-router": "^1.2.2",
+    "expo-status-bar": "~1.4.4",
+    "mdb-react-ui-kit": "^5.1.0",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "^0.18.12",
-    "tailwindcss": "^3.2.7",
+    "react-native-web": "~0.18.11",
     "twrnc": "^3.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.2.7"
   },
   "private": true
 }
