--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.6",
@@ -19,12 +23,16 @@
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
     "mdb-react-ui-kit": "^5.1.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-paper": "^5.4.1",
+    "react-native-reanimated": "^3.0.2",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11",
     "twrnc": "^3.6.0"
   },
